--- a/app/sideNavBar.html
+++ b/app/sideNavBar.html
@@ -1,11 +1,12 @@
 <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" id="closemybeautifynavbar" class="closebtn">&times;</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+  <div class="topnav">
+    <a class="active" href="#home" id="styleTab">Style</a>
+    <a href="#news" id="cssTab">Css</a>
   </div>
-  
-  <h2>Animated Sidenav Example</h2>
-  <p>Click on the element below to open the side navigation menu.</p>
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+  <button class="absoluteSave" type="button">Save</button>
+  <button class="absoluteCancel" type="button">Cancel</button>
+</div>
+
+<h2>Animated Sidenav Example</h2>
+<p>Click on the element below to open the side navigation menu.</p>
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
