--- a/app/sideNavBar.html
+++ b/app/sideNavBar.html
@@ -11,6 +11,6 @@
     <div id="Class" class="tabcontent tabEditable" contenteditable="true">
 
     </div>
-    <button id="beautifySave" class="absoluteSave" type="button">Save</button>
+    <button id="beautifySave" class="absoluteSave" type="button">Apply</button>
     <button id="beautifyCancel" class="absoluteCancel" type="button">Cancel</button>
 </div>
