--- a/app/sideNavBar.html
+++ b/app/sideNavBar.html
@@ -4,13 +4,13 @@
         <button id="beautifyClasses" class="tablinks">Class</button>
     </div>
 
-    <div id="Style" class="tabcontent tabEditable" contenteditable="true">
+    <textarea id="Style" class="tabcontent tabEditable" >
 
-    </div>
+    </textarea>
 
-    <div id="Class" class="tabcontent tabEditable" contenteditable="true">
+    <textarea id="Class" class="tabcontent tabEditable" >
 
-    </div>
+    </textarea>
     <button id="beautifySave" class="absoluteSave" type="button">Apply</button>
     <button id="beautifyCancel" class="absoluteCancel" type="button">Cancel</button>
 </div>
