--- a/app/sideNavBar.html
+++ b/app/sideNavBar.html
@@ -1,14 +1,15 @@
-<div id="mySidenav" class="sidenav padding-top-0">
+<div id="mySidenav" class="sidenav">
+<div class="ElementsTab" style="display: none;">Element</div>
     <div class="tab">
-        <button id="beautifyStyles" class="tablinks">Style</button>
-        <button id="beautifyClasses" class="tablinks">Class</button>
+        <button id="beautifyStyles" class="tablinks"><i class="fa fa-star-half-o" aria-hidden="true"></i> Style</button>
+        <button id="beautifyClasses" class="tablinks"><i class="fa fa-paint-brush" aria-hidden="true"></i> Class</button>
     </div>
 
-    <textarea id="Style" class="tabcontent tabEditable" >
+    <textarea id="Style" class="tabcontent" >
 
     </textarea>
 
-    <textarea id="Class" class="tabcontent tabEditable" >
+    <textarea id="Class" class="tabcontent" >
 
     </textarea>
     <button id="beautifySave" class="absoluteSave" type="button">Apply</button>
