--- a/app/sideNavBar.html
+++ b/app/sideNavBar.html
@@ -1,8 +1,8 @@
 <div id="mySidenav" class="sidenav">
 <div class="ElementsTab" style="display: none;">Element</div>
     <div class="tab">
-        <button id="beautifyStyles" class="tablinks"><i class="fa fa-star-half-o" aria-hidden="true"></i> Style</button>
-        <button id="beautifyClasses" class="tablinks"><i class="fa fa-paint-brush" aria-hidden="true"></i> Class</button>
+        <button id="beautifyStyles" class="tablinks">Style</button>
+        <button id="beautifyClasses" class="tablinks">Class</button>
     </div>
 
     <textarea id="Style" class="tabcontent" >
@@ -12,6 +12,8 @@
     <textarea id="Class" class="tabcontent" >
 
     </textarea>
-    <button id="beautifySave" class="absoluteSave" type="button">Apply</button>
-    <button id="beautifyCancel" class="absoluteCancel" type="button">Cancel</button>
+    <button id="beautifySave" class="beautifybutton save" style="" type="button">Apply</button>
+    <button id="beautifyCopy" class="beautifybutton copy" type="button">Copy</button>
+    <button id="beautifyUndo" class="beautifybutton undo" type="button">Undo</button>
+    <button id="beautifyCancel" class="beautifybutton cancel" type="button">Close</button>
 </div>
