--- a/app/sideNavBar.html
+++ b/app/sideNavBar.html
@@ -1,8 +1,8 @@
 <div id="mySidenav" class="sidenav">
 <div class="ElementsTab" style="display: none;">Element</div>
     <div class="tab">
-        <button id="beautifyStyles" class="tablinks">Style</button>
-        <button id="beautifyClasses" class="tablinks">Class</button>
+        <button id="beautifyStyles" style="font-size: 15px;" class="tablinks">Style</button>
+        <button id="beautifyClasses" style="font-size: 15px;" class="tablinks">Class</button>
     </div>
 
     <textarea id="Style" class="tabcontent" >
@@ -12,8 +12,8 @@
     <textarea id="Class" class="tabcontent" >
 
     </textarea>
-    <button id="beautifySave" class="beautifybutton save" style="" type="button">Apply</button>
-    <button id="beautifyCopy" class="beautifybutton copy" type="button">Copy</button>
-    <button id="beautifyUndo" class="beautifybutton undo" type="button">Undo</button>
-    <button id="beautifyCancel" class="beautifybutton cancel" type="button">Close</button>
+    <button id="beautifySave" class="beautifybutton save" style="font-size: 11px;" type="button">Apply</button>
+    <button id="beautifyCopy" class="beautifybutton copy" style="font-size: 11px;" type="button">Copy</button>
+    <button id="beautifyUndo" class="beautifybutton undo" style="font-size: 11px;" type="button">Undo</button>
+    <button id="beautifyCancel" class="beautifybutton cancel" style="font-size: 11px;" type="button">Close</button>
 </div>
