--- a/app/sideNavBar.html
+++ b/app/sideNavBar.html
@@ -12,8 +12,8 @@
     <textarea id="Class" class="tabcontent" >
 
     </textarea>
-    <button id="beautifySave" class="beautifybutton save" style="font-size: 11px;" type="button">Apply</button>
-    <button id="beautifyCopy" class="beautifybutton copy" style="font-size: 11px;" type="button">Copy</button>
-    <button id="beautifyUndo" class="beautifybutton undo" style="font-size: 11px;" type="button">Undo</button>
-    <button id="beautifyCancel" class="beautifybutton cancel" style="font-size: 11px;" type="button">Close</button>
+    <button id="beautifySave" class="beautifybutton save" style="font-size: 11px;position: absolute;width: 50px;bottom: 10px;border: 8px solid #cccccc;background-color: #cccccc;cursor: pointer;" type="button">Apply</button>
+    <button id="beautifyCopy" class="beautifybutton copy" style="font-size: 11px;position: absolute;width: 50px;bottom: 10px;border: 8px solid #cccccc;background-color: #cccccc;cursor: pointer;" type="button">Copy</button>
+    <button id="beautifyUndo" class="beautifybutton undo" style="font-size: 11px;position: absolute;width: 50px;bottom: 10px;border: 8px solid #cccccc;background-color: #cccccc;cursor: pointer;" type="button">Undo</button>
+    <button id="beautifyCancel" class="beautifybutton cancel" style="font-size: 11px;position: absolute;width: 50px;bottom: 10px;border: 8px solid #cccccc;background-color: #cccccc;cursor: pointer;" type="button">Close</button>
 </div>
