--- a/app/sideNavBar.html
+++ b/app/sideNavBar.html
@@ -3,6 +3,7 @@
     <div class="tab">
         <button id="beautifyStyles" style="font-size: 15px;" class="tablinks">Style</button>
         <button id="beautifyClasses" style="font-size: 15px;" class="tablinks">Class</button>
+        <button id="beautifyMosaic" style="font-size: 15px;" class="tablinks">Mosaic</button>
     </div>
 
     <textarea id="Style" class="tabcontent" >
@@ -12,6 +13,9 @@
     <textarea id="Class" class="tabcontent" >
 
     </textarea>
+    <div id="Mosaic" class="tabcontent">
+        <input type="checkbox" name="Inject Mosaic" id=""> Apply Mosaic
+    </div>
     <button id="beautifySave" class="beautifybutton save" style="font-size: 11px;position: absolute;width: 50px;bottom: 10px;border: 8px solid #cccccc;background-color: #cccccc;cursor: pointer;" type="button">Apply</button>
     <button id="beautifyCopy" class="beautifybutton copy" style="font-size: 11px;position: absolute;width: 50px;bottom: 10px;border: 8px solid #cccccc;background-color: #cccccc;cursor: pointer;" type="button">Copy</button>
     <button id="beautifyUndo" class="beautifybutton undo" style="font-size: 11px;position: absolute;width: 50px;bottom: 10px;border: 8px solid #cccccc;background-color: #cccccc;cursor: pointer;" type="button">Undo</button>
